test to prevent scroll on ios safari browser

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -16,5 +16,6 @@ body {
 }
 
 .disable-scroll {
+  height: 100vh;
   overflow: hidden;
 }
