--- a/src/assets/style/landing/authHeader.scss
+++ b/src/assets/style/landing/authHeader.scss
@@ -37,7 +37,7 @@
     font: $WS-base;
     color: rgb(169, 164, 175);
 
-    span {
+    div {
       @media (max-width: 700px) {
         display: none;
       }
